readonly side textareas, fix wrapping on content textarea

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -75,7 +75,6 @@ img.centered {
 	textarea.branch {
 		.pristine-textarea;
 		white-space: nowrap;
-		width: 100%;
 		max-width: 100%;
 		min-height: 100vh;
 		background-color: @color-paper-base;
